--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,18 @@
             <version>7.4.0</version>
         </dependency>
 
-        <dependency>  <!-- for assertions -->
+        <dependency>  <!-- for assertions in body -->
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
             <version>1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.14.1</version>
+        </dependency>
+
 
     </dependencies>
 
