--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,26 @@
             <version>4.1.0</version>
         </dependency>
 
-
     </dependencies>
+
+<!-- Jenkins in Calistirma komutunun, nereyi actiracagini belirledigimiz plugin -->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M1</version>
+                <configuration>
+
+                    <suiteXmlFiles>
+                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
 
 
 </project>
